# ovr-penguin

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
source/: main.cpp  nyxmemory.hpp  ovrpenguin.cpp  ovrpenguin.hpp
source/diagnostics/: logger.cpp  logger.hpp
source/graphics/: gl_context.cpp  gl_context.hpp
source/io/: stdio_handler.cpp  stdio_handler.hpp
source/math/: mat4x4.hpp  num_types.hpp  quat.hpp  vec2.hpp  vec3.hpp  vec4.hpp
source/media/: screen_capturer.cpp  screen_capturer.hpp
source/nyxpiri_glib_abst/: glib_auto_ptr.hpp  glib_error_ptr.hpp  glib_print_utils.hpp
source/scene/: node.cpp  node.hpp  node3d.cpp  node3d.hpp  root_node.cpp  root_node.hpp
source/system/: filesystem.cpp  filesystem.hpp
source/types/: color.hpp  event.hpp  mutex.hpp  nyxarrays.hpp  result.hpp  string_command.hpp
source/vr/: ovr_overlay.cpp  ovr_overlay.hpp  ovr_runtime.cpp  ovr_runtime.hpp  ovr_window_overlay.cpp  ovr_window_overlay.hpp  xrdevice.cpp  xrdevice.hpp
